[gd_scene load_steps=4 format=3 uid="uid://q611pheho4hq"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_t86yv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btw75"]
bg_color = Color(1, 0.914062, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_peo58"]
bg_color = Color(0.988281, 0.590652, 0, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t86yv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -311.5
offset_top = 41.0
offset_right = 311.5
offset_bottom = 124.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "PAUSE MENU"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_btw75")
theme_override_styles/normal = SubResource("StyleBoxFlat_peo58")
text = "RESUME"

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "RETURN TO MENU"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
